# LogFast---High-Performance-Log-Analyzer

./: CMakeLists.txt  README.md
src/: log_generator.cpp  log_generator.h  log_parser.cpp  log_parser.h  main.cpp
